[package]
name = "bevy_app"
version = "0.14.0-dev"
edition = "2021"
description = "Provides core App functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
bevy_ci_testing = ["serde", "ron"]
bevy_debug_stepping = []
default = ["bevy_reflect", "bevy_debug_stepping"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]

[dependencies]
# bevy
bevy_derive = { path = "../bevy_derive", version = "0.14.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.14.0-dev", default-features = false }
bevy_reflect = { path = "../bevy_reflect", version = "0.14.0-dev", optional = true }
bevy_utils = { path = "../bevy_utils", version = "0.14.0-dev" }
bevy_tasks = { path = "../bevy_tasks", version = "0.14.0-dev" }

# other
serde = { version = "1.0", features = ["derive"], optional = true }
ron = { version = "0.8.0", optional = true }
downcast-rs = "1.2.0"
log = "0.4"

wgpu = { path = "../../../wgpu/wgpu", default-features = false, features = ["wasi", "wgsl", "naga", "naga-ir", "fragile-send-sync-non-atomic-wasm"]}
# raw-window-handle = { git = "https://github.com/wasi-gfx/raw-window-handle.git", rev = "c14d47c8e5ea1ef9f776da481d8c4ee7e41f9832" }
lazy_static = "1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { version = "0.2" }
# web-sys = { version = "0.3", features = ["Window"] }

[lints]
workspace = true
