[package]
name = "bevy_winit"
version = "0.14.0-dev"
edition = "2021"
description = "A winit window and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
# wayland = ["winit/wayland", "winit/wayland-csd-adwaita"]
# x11 = ["winit/x11"]
# accesskit_unix = ["accesskit_winit/accesskit_unix", "accesskit_winit/async-io"]

[dependencies]
# bevy
bevy_a11y = { path = "../bevy_a11y", version = "0.14.0-dev" }
bevy_app = { path = "../bevy_app", version = "0.14.0-dev" }
bevy_derive = { path = "../bevy_derive", version = "0.14.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.14.0-dev" }
bevy_hierarchy = { path = "../bevy_hierarchy", version = "0.14.0-dev" }
bevy_input = { path = "../bevy_input", version = "0.14.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.14.0-dev" }
bevy_window = { path = "../bevy_window", version = "0.14.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.14.0-dev" }
bevy_tasks = { path = "../bevy_tasks", version = "0.14.0-dev" }

# other
# feature rwh_06 refers to window_raw_handle@v0.6
# winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
# accesskit_winit = { version = "0.17", default-features = false, features = [
#   "rwh_06",
# ] }
approx = { version = "0.5", default-features = false }
# raw-window-handle = "0.6"
raw-window-handle = { git = "https://github.com/wasi-gfx/raw-window-handle.git", rev = "c14d47c8e5ea1ef9f776da481d8c4ee7e41f9832" }
wgpu = { path = "../../../wgpu/wgpu", default-features = false, features = ["wasi", "wgsl", "naga", "naga-ir", "fragile-send-sync-non-atomic-wasm"]}

wit-bindgen = "0.34"
log = "0.4"
wasi = "=0.13.1"

# [target.'cfg(target_os = "android")'.dependencies]
# winit = { version = "0.29", default-features = false, features = [
#   "android-native-activity",
#   "rwh_06",
# ] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { version = "0.2" }
# web-sys = "0.3"

crossbeam-channel = "0.5"

[package.metadata.docs.rs]
features = ["x11"]

[lints]
workspace = true
